--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,16 @@
 <head>
-  <title>pomegra-next</title>
+  <!-- Required meta tags-->
+  <meta charset="utf-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover"
+  />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <!-- Color theme for statusbar (Android only) -->
+  <meta name="theme-color" content="#2196f3" />
+  <!-- Your app title -->
+  <title>Pomegra</title>
+  <!-- Path to Framework7 Library CSS Bundle -->
 </head>
 
 <body>
