tried to add font icons to work unsuccessfully

--- a/client/main.html
+++ b/client/main.html
@@ -9,7 +9,7 @@
   <!-- Color theme for statusbar (Android only) -->
   <meta name="theme-color" content="#2196f3" />
   <!-- Your app title -->
-  <title>Pomegra</title>
+  <title>Librella</title>
 </head>
 
 <body>
