--- a/client/main.html
+++ b/client/main.html
@@ -10,6 +10,13 @@
   <meta name="theme-color" content="#2196f3" />
   <!-- Your app title -->
   <title>Librella</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
 </head>
 
 <body>
