--- a/client/main.html
+++ b/client/main.html
@@ -17,6 +17,27 @@
   <link rel="manifest" href="/site.webmanifest" />
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#ffffff" />
+  <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
+  <script>
+    if ('addEventListener' in document) {
+      document.addEventListener(
+        'DOMContentLoaded',
+        function() {
+          FastClick.attach(document.body);
+        },
+        false
+      );
+    }
+    if (!window.Promise) {
+      document.writeln(
+        '<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"' +
+          '>' +
+          '<' +
+          '/' +
+          'script>'
+      );
+    }
+  </script>
 </head>
 
 <body>
