--- a/client/main.html
+++ b/client/main.html
@@ -9,12 +9,12 @@
   <!-- Color theme for statusbar (Android only) -->
   <meta name="theme-color" content="#2196f3" />
   <!-- Your app title -->
-  <title>Librella</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
   <link rel="manifest" href="/site.webmanifest" />
+  <link rel="manifest" href="/manifest.json" />
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#ffffff" />
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
@@ -38,6 +38,14 @@
       );
     }
   </script>
+  <title>Librella</title>
+  <noscript>
+    <style>
+      body:before {
+        content: 'Sorry, your browser does not support JavaScript!';
+      }
+    </style>
+  </noscript>
 </head>
 
 <body>
