--- a/client/main.html
+++ b/client/main.html
@@ -16,11 +16,14 @@
   <link rel="manifest" href="/manifest.json" />
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#ffffff" />
+
+  <meta name="ostrio-domain" content="HwCNHxaXyormG-Yij0wdUw0lRFvCoWVaek0NiCICAnL" />
+
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
   <script>
-    if ("addEventListener" in document) {
+    if ('addEventListener' in document) {
       document.addEventListener(
-        "DOMContentLoaded",
+        'DOMContentLoaded',
         function () {
           FastClick.attach(document.body);
         },
@@ -30,10 +33,10 @@
     if (!window.Promise) {
       document.writeln(
         '<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"' +
-          ">" +
-          "<" +
-          "/" +
-          "script>"
+          '>' +
+          '<' +
+          '/' +
+          'script>'
       );
     }
   </script>
@@ -41,7 +44,7 @@
   <noscript>
     <style>
       body:before {
-        content: "Sorry, your browser does not support JavaScript!";
+        content: 'Sorry, your browser does not support JavaScript!';
       }
     </style>
   </noscript>
