--- a/client/main.html
+++ b/client/main.html
@@ -38,6 +38,10 @@
     }
   </script>
 
+  <script type="text/javascript">
+    window.IS_RENDERED = false;
+  </script>
+
   <noscript>
     <style>
       body:before {
@@ -49,4 +53,11 @@
 
 <body>
   <div id="react-target"></div>
+
+  <script type="text/javascript">
+    async(function (err, res) {
+      // More synchronous code here
+      window.IS_RENDERED = true;
+    });
+  </script>
 </body>
